[package]
name = "async-repeater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.28"
tokio-stream = { version = "0.1.14", default-features = false, features = [] }
tokio-util = { version = "0.7.8", default-features = false, features = [
    "time",
] }
tokio = { version = "1.32.0", features = ["macros", "rt", "signal"] }

[dev-dependencies]

