[package]
name = "async-repeater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["time"] }
tokio = { version = "1.32", default-features = false, features = ["macros", "rt", "signal"] }

[dev-dependencies]
