[package]
name = "async-repeater"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Tokio based library for repeating tasks with user defined durations and start times."
homepage = "https://github.com/NotNorom/async-repeater"
repository = "https://github.com/NotNorom/async-repeater"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["time"] }
tokio = { version = "1.46", default-features = false, features = ["macros", "rt", "signal"] }

[dev-dependencies]
